fixing padding on mobile menu items

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ Text Domain:  zyrgon-child
 
 .mobile-main-nav li > a {
     justify-content: center;
-    padding: 0px 0px 70px 0px;
+    padding: 35px 0px 35px 0px;
 }
 
 .top-header .l-to-r-line>li.act>a i.underline, .top-header .l-to-r-line>li.dt-hovered>a i.underline, .top-header .l-to-r-line>li>a:hover i.underline {
